# solochain-collectable-template

./: Cargo.toml  README.md
pallets/collectables/: Cargo.toml
pallets/collectables/src/: impls.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
